--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -30,15 +30,15 @@
     <ClInclude Include="FixedVector.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Platform.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DataChunk.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="STLAllocate.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="STLAllocator.cpp">
