--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -122,6 +122,7 @@
     <ClInclude Include="StateMachine.h" />
     <ClInclude Include="STLAllocator.h" />
     <ClInclude Include="Vector2I.h" />
+    <ClInclude Include="Vector3I.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseState.cpp" />
@@ -133,6 +134,7 @@
     <ClCompile Include="StateMachine.cpp" />
     <ClCompile Include="STLAllocator.cpp" />
     <ClCompile Include="Vector2I.cpp" />
+    <ClCompile Include="Vector3I.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
