--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Vector2I.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Vector3I.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DataChunk.cpp">
@@ -84,6 +87,9 @@
       <Filter>Base</Filter>
     </ClCompile>
     <ClCompile Include="Vector2I.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Vector3I.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
