--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClInclude Include="Vector2I.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Math.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Log.h">
+      <Filter>Base</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DataChunk.cpp">
@@ -84,6 +90,12 @@
       <Filter>Base</Filter>
     </ClCompile>
     <ClCompile Include="Vector2I.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Math.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Log.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
