--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -114,32 +114,44 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BaseState.h" />
+    <ClInclude Include="Battle.h" />
     <ClInclude Include="Construct.h" />
+    <ClInclude Include="CoreLocator.h" />
     <ClInclude Include="DataChunk.h" />
     <ClInclude Include="EnumCode.h" />
     <ClInclude Include="FixedVector.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="GlobalVar.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Rand.h" />
+    <ClInclude Include="Singleton.h" />
     <ClInclude Include="StandState.h" />
     <ClInclude Include="StateMachine.h" />
     <ClInclude Include="STLAllocator.h" />
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="Vector2I.h" />
     <ClInclude Include="Vector3I.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseState.cpp" />
+    <ClCompile Include="Battle.cpp" />
+    <ClCompile Include="CoreLocator.cpp" />
     <ClCompile Include="DataChunk.cpp" />
     <ClCompile Include="FixedVector.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GlobalVar.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="Rand.cpp" />
+    <ClCompile Include="Singleton.cpp" />
     <ClCompile Include="StandState.cpp" />
     <ClCompile Include="StateMachine.cpp" />
     <ClCompile Include="STLAllocator.cpp" />
+    <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Vector2I.cpp" />
     <ClCompile Include="Vector3I.cpp" />
   </ItemGroup>
